<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BOOK NAME" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name" />

            <TextView
                android:id="@+id/priceAorE"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priceTEXT" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price" />

            <TextView
                android:id="@+id/quantityAorE"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantityTEXT" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/increase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/increase" />

                <EditText
                    android:id="@+id/edit_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity" />

                <Button
                    android:id="@+id/decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decrease" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_image" />

                <ImageView
                    android:id="@+id/addOrEdit"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:background="@color/background" />

                <Button
                    android:id="@+id/importImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/addOrEdit"
                    android:layout_marginRight="16dp"
                    android:text="@string/import_image" />
            </RelativeLayout>

            <TextView
                android:id="@+id/Supplier_Name"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_nameTEXT" />

            <EditText
                android:id="@+id/edit_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name" />

            <TextView
                android:id="@+id/Supplier_Email"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_emailTEXT" />

            <EditText
                android:id="@+id/edit_supplier_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_email" />

            <TextView
                android:id="@+id/Supplier_Phone_Number"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_phoneTEXT" />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_phone_number" />

            <Button
                android:id="@+id/order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="order" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>